@startuml
hide empty members

skinparam class {
  BackgroundColor<<league>> Gold
  BackgroundColor<<club>> LightBlue
  BackgroundColor<<player>> LightGreen
}

class League <<league>> {
  eg. AFL
}
class Season <<league>> {
  eg. AFL 2025
}
class Round <<league>> {
  eg. AFL 2025 Rd 1
}
class Match <<league>> {
  eg. CROWS v NM in AFL 2025 Rd 1
  venue
  start_dt
  --
  <<denormalized>>
  result: home_win|away_win|draw|no_result
}
class Bye <<league>> {
  eg. CROWS Bye in AFL 2025 Rd 1
}

class Club <<club>> {
  eg. CROWS
}
class ClubSeason <<club>> {
  eg. CROWS in AFL 2025
  --
  <<denormalized>>
  played
  won
  lost
  drawn
  for
  against
  premiership_points
}
class ClubMatch <<club>> {
  eg. CROWS in CROWS v NM in AFL 2025 Rd 1
  side: home|away
  rushed_behinds
  --
  <<denormalized>>
  score
  premiership_points
}

class Player <<player>> {
  eg. Dawson
}
class PlayerSeason <<player>> {
  eg. Dawson in CROWS in AFL 2025
}
class PlayerMatch <<player>> {
  eg. Dawson in CROWS in CROWS v NM in AFL 2025 Rd 1
  kicks
  handballs
  marks
  hitouts
  tackles
  goals
  behinds
}

League *-- "0..*" Season
Season *-- "0..*" Round
Round *-- "0..*" Match
Round *-- "0..*" Bye

Club *-- "0..*" ClubSeason
Season *-- "0..*" ClubSeason
Bye *-- "1" ClubSeason

Match *-- "2" ClubMatch
ClubSeason *-- "0..*" ClubMatch

Player *-- "0..*" PlayerSeason
ClubSeason *-- "0..*" PlayerSeason

ClubMatch *-- "0..*" PlayerMatch
PlayerSeason *-- "0..*" PlayerMatch

@enduml
